--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   </head>
 	<body>
 		<header>
-		<nav>
-			<div class="row">
-				<img src="resources/css/img/logo-white.png" alt="Omnifood logo" class="logo">
-				<ul class="main-nav">
-					<li><a href="#">Food Delivery</a></li>
-					<li><a href="#">How It Works</a></li>
-					<li><a href="#">Our Cities</a></li>
-					<li><a href="#">Sign-Up</a></li>
-				</ul>
-			</div><!-- end row div -->
-		</nav>
+			<nav>
+				<div class="row">
+					<img src="resources/css/img/logo-white.png" alt="Omnifood logo" class="logo">
+					<ul class="main-nav">
+						<li><a href="#">Food Delivery</a></li>
+						<li><a href="#">How It Works</a></li>
+						<li><a href="#">Our Cities</a></li>
+						<li><a href="#">Sign-Up</a></li>
+					</ul>
+				</div><!-- end row div -->
+			</nav>
 			<div class="hero-text-box">
 				<h1>Goodbye junk food. <br> Hello super healthy meals.</h1>
 				<a class="btn btn-full" href="#">I’m hungry</a>
 				<a class="btn btn-ghost" href="#">Show me more</a>
-			</div>
+			</div><!-- end hero-text-box -->
 		</header>	<!-- header works just like a div element -->
 		<section class="section-features">
 			<div class="row">
@@ -36,34 +36,109 @@
 			</p>
 			<div class="row">
 				<div class="col span-1-of-4 box">
-					<i class="ion-ios-infinite-outline"></i>
+					<i class="ion-ios-infinite-outline icon-big"></i>
 					<h3>Up to 365 days/year</h3>
 					<p>
 					Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
 					</p>
 				</div><!-- end col span-1-of-4 -->
 				<div class="col span-1-of-4 box">
-					<i class="ion-ios-stopwatch-outline"></i>
+					<i class="ion-ios-stopwatch-outline icon-big"></i>
 					<h3>Ready in 20 minutes</h3>
 					<p>
 					You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
 					</p>
 				</div><!-- end col span-1-of-4 -->
 				<div class="col span-1-of-4 box">
-					<i class="ion-ios-nutrition-outline"></i>
+					<i class="ion-ios-nutrition-outline icon-big"></i>
 					<h3>100% organic</h3>
 					<p>
 					All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
 					</p>
 				</div><!-- end col span-1-of-4 -->
 				<div class="col span-1-of-4 box">
-				<i class="ion-ios-cart-outline"></i>
+				<i class="ion-ios-cart-outline icon-big"></i>
 					<h3>Order anything</h3>
 					<p>
 					We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
 					</p>
 				</div><!-- end col span-1-of-4 -->
 			</div><!-- end row div -->
+		</section>
+
+		<section class="section-meals">
+			<ul class="meals-showcase clearfix">
+				<li>
+					<figure class="meal-photo">
+						<img src="resources/css/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+					</figure>
+				</li>
+				<li>
+					<figure class="meal-photo">
+						<img src="resources/css/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+					</figure>
+				</li>
+				<li>
+					<figure class="meal-photo">
+						<img src="resources/css/img/3.jpg" alt="Chicken breast steak with vegetables">
+					</figure>
+				</li>
+				<li>
+					<figure class="meal-photo">
+						<img src="resources/css/img/4.jpg" alt="Autumn pumpkin soup">
+					</figure>
+				</li>
+			</ul>
+
+			<ul class="meals-showcase clearfix">
+				<li>
+					<figure class="meal-photo">
+						<img src="resources/css/img/5.jpg" alt="Paleo beef steak with vegetables">
+					</figure>
+				</li>
+				<li>
+					<figure class="meal-photo">
+						<img src="resources/css/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+					</figure>
+				</li>
+				<li>
+					<figure class="meal-photo">
+						<img src="resources/css/img/7.jpg" alt="Burger with cheddar and bacon">
+					</figure>
+				</li>
+				<li>
+					<figure class="meal-photo">
+						<img src="resources/css/img/8.jpg" alt="Granola with cherries and strawberries">
+					</figure>
+				</li>
+			</ul>
+		</section class="section-steps">
+			<div class="row">
+			<h2>How it works &mdash; Simple as 1, 2, 3</h2>
+			</div><!-- end of row -->
+			<div class="row">
+				<div class="col span-1-of-2">
+					<img src="resources/css/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
+				</div><!-- end of col span-1-of-2 -->
+				<div class="col span-1-of-2">
+					<div class="works-step">
+						<div>1</div>
+						<p>Choose the subscription plan that best fits your needs and sign up today.</p>
+					</div><!-- end of works-step-->
+					<div class="works-step">
+						<div>2</div>
+						<p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+					</div><!-- end of works-step-->
+					<div class="works-step">
+						<div>3</div>
+						<p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+					</div><!-- end of works-step-->				
+					<a href="#" class="btn-app"><img src="resources/css/img/download-app.svg" alt="App Store Button"></a>	
+					<a href="#" class="btn-app"><img src="resources/css/img/download-app-android.png" alt="Play Store Button"></a>	
+			</div>
+
+		<section>
+			
 		</section>
 	</body>
 </html>
