added cities section

--- a/index.html
+++ b/index.html
@@ -112,15 +112,16 @@
 					</figure>
 				</li>
 			</ul>
-		</section class="section-steps">
+		</section>
+		<section class="section-steps">
 			<div class="row">
-			<h2>How it works &mdash; Simple as 1, 2, 3</h2>
+				<h2>How it works &mdash; Simple as 1, 2, 3</h2>
 			</div><!-- end of row -->
 			<div class="row">
-				<div class="col span-1-of-2">
+				<div class="col span-1-of-2 steps-box">
 					<img src="resources/css/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
-				</div><!-- end of col span-1-of-2 -->
-				<div class="col span-1-of-2">
+				</div><!-- end of col span-1-of-2 steps-box -->
+				<div class="col span-1-of-2 steps-box">
 					<div class="works-step">
 						<div>1</div>
 						<p>Choose the subscription plan that best fits your needs and sign up today.</p>
@@ -135,10 +136,84 @@
 					</div><!-- end of works-step-->				
 					<a href="#" class="btn-app"><img src="resources/css/img/download-app.svg" alt="App Store Button"></a>	
 					<a href="#" class="btn-app"><img src="resources/css/img/download-app-android.png" alt="Play Store Button"></a>	
-			</div>
+				</div><!-- end of col span-1-of-2 steps-box-->
+			</div><!-- end of row -->
+		</section><!-- end of section-steps -->
+		
+		<section class="section-cities">
+		<div class="row">
+			<h2>We're currently in these cities</h2>
+		</div>
+		<div class="row">
+				<div class="col span-1-of-4 box">
+				<img src="resources/css/img/lisbon-3.jpg" alt="Lisbon">
+					<h3>Lisbon</h3>
+					<div class="city-feature">
+						<i class="ion-ios-person icon-small"></i>
+						1600+ happy eaters
+					</div> <!-- end city feature div-->
+					<div class="city-feature">
+						<i class="ion-ios-star icon-small"></i>
+						60+ top chefs
+					</div>	<!-- end city feature div-->
+					<div class="city-feature">
+						<i class="ion-social-twitter icon-small"></i>
+						<a href="#">@omnifood_lx</a>
+					</div><!-- end city feature div-->
+				</div><!-- end col span-1-of-4 -->
 
-		<section>
-			
+				<div class="col span-1-of-4 box">
+				<img src="resources/css/img/san-francisco.jpg" alt="San Francisco">
+					<h3>San Francisco</h3>
+					<div class="city-feature">
+						<i class="ion-ios-person icon-small"></i>
+						3700+ happy eaters
+					</div> <!-- end city feature div-->
+					<div class="city-feature">
+						<i class="ion-ios-star icon-small"></i>
+						160+ top chefs
+					</div>	<!-- end city feature div-->
+					<div class="city-feature">
+						<i class="ion-social-twitter icon-small"></i>
+						<a href="#">@omnifood_sf</a>
+					</div><!-- end city feature div-->
+				</div><!-- end col span-1-of-4 -->
+
+				<div class="col span-1-of-4 box">
+				<img src="resources/css/img/berlin.jpg" alt="Berlin">
+					<h3>Berlin</h3>
+					<div class="city-feature">
+						<i class="ion-ios-person icon-small"></i>
+						2300+ happy eaters
+					</div> <!-- end city feature div-->
+					<div class="city-feature">
+						<i class="ion-ios-star icon-small"></i>
+						110+ top chefs
+					</div>	<!-- end city feature div-->
+					<div class="city-feature">
+						<i class="ion-social-twitter icon-small"></i>
+						<a href="#">@omnifood_berlin</a>
+					</div><!-- end city feature div-->
+				</div><!-- end col span-1-of-4 -->
+
+				<div class="col span-1-of-4 box">
+				<img src="resources/css/img/london.jpg" alt="London">
+					<h3>London</h3>
+					<div class="city-feature">
+						<i class="ion-ios-person icon-small"></i>
+						1600+ happy eaters
+					</div> <!-- end city feature div-->
+					<div class="city-feature">
+						<i class="ion-ios-star icon-small"></i>
+						110+ top chefs
+					</div>	<!-- end city feature div-->
+					<div class="city-feature">
+						<i class="ion-social-twitter icon-small"></i>
+						<a href="#">@omnifood_london</a>
+					</div><!-- end city feature div-->
+				</div><!-- end col span-1-of-4 -->
+			</div><!-- end of row -->
+		
 		</section>
 	</body>
 </html>
