--- a/index.html
+++ b/index.html
@@ -213,7 +213,99 @@
 					</div><!-- end city feature div-->
 				</div><!-- end col span-1-of-4 -->
 			</div><!-- end of row -->
-		
 		</section>
+		<section class="section-testimonials">
+			<div class="row">
+				<h2>Our customers can't live without us</h2>
+			</div>
+			<div class="row">
+				<div class="col span-1-of-3">
+					<blockquote>
+						Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+						<cite><img src="resources/css/img/customer-1.jpg" alt="">Alberto Duncan</cite>
+					</blockquote>
+				</div><!-- end of row span-1-of-3 -->				
+				<div class="col span-1-of-3">
+					<blockquote>
+						Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+						<cite><img src="resources/css/img/customer-2.jpg" alt="">Joana Silva</cite>
+					</blockquote>
+				</div><!-- end of row span-1-of-3 -->				
+				<div class="col span-1-of-3">
+					<blockquote>
+						I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+						<cite><img src="resources/css/img/customer-3.jpg" alt="">Milton Chapman</cite>
+					</blockquote>
+				</div><!-- end of col span-1-of-3 -->
+			</div> <!-- end of row  -->
+		</section>
+		<section class="section-plans">
+			<div class="row">
+				<h2>Start eating healthy today</h2>
+			</div><!-- end of row  -->
+			<div class="row">
+				<div class="col span-1-of-3">
+					<div class="plan-box">	
+						<div>
+							<h3>Premium</h3>
+							<p class="plan-price">$399 / month</p>
+							<p class="plan-price-meal">That's only 13.30$ per meal</p>
+						</div>
+						<div>
+							<ul>
+								<li><i class="ion-ios-checkmark-empty">1 meal every day</i></li>
+								<li><i class="ion-ios-checkmark-empty">Order 24/7</i></li>
+								<li><i class="ion-ios-checkmark-empty">Access to newest creations</i></li>
+								<li><i class="ion-ios-checkmark-empty">Free delivery</i></li>
+							</ul>
+						</div>
+						<div>
+							<a href="#" class="btn btn-full"></a>
+						</div>
+					</div><!-- end of plan-box -->
+				</div><!-- end of col span-1-of-3 -->					
+				<div class="col span-1-of-3">
+					<div class="plan-box">	
+						<div>
+							<h3>Pro</h3>
+							<p class="plan-price">$199 / month</p>
+							<p class="plan-price-meal">That's only 14.90$ per meal</p>
+						</div>
+						<div>
+							<ul>
+								<li><i class="ion-ios-checkmark-empty">1 meal 10 days/month</i></li>
+								<li><i class="ion-ios-checkmark-empty">Order 24/7</i></li>
+								<li><i class="ion-ios-checkmark-empty">Access to newest creations</i></li>
+								<li><i class="ion-ios-checkmark-empty">Free delivery</i></li>
+							</ul>
+						</div>
+						<div>
+							<a href="#" class="btn btn-ghost"></a>
+						</div>
+					</div><!-- end of plan-box -->
+				</div><!-- end of col span-1-of-3 -->	
+				<div class="col span-1-of-3">
+					<div class="plan-box">	
+						<div>
+							<h3>Starter</h3>
+							<p class="plan-price">$99 / month</p>
+							<p class="plan-price-meal"></p>
+						</div>
+						<div>
+							<ul>
+								<li><i class="ion-ios-checkmark-empty">1 meal</i></li>
+								<li><i class="ion-ios-checkmark-empty">Order 8 am to 12 pm</i></li>
+								<li><i class="ion-ios-close-empty">Access to newest creations</i></li>
+								<li><i class="ion-ios-checkmark-empty">Free delivery</i></li>
+							</ul>
+						</div>
+						<div>
+							<a href="#" class="btn btn-ghost"></a>
+						</div>
+					</div><!-- end of plan-box -->
+				</div><!-- end of col span-1-of-3 -->				
+			</div><!-- end of row  -->
+		</section>
+
 	</body>
 </html>
