added submit form styling

--- a/index.html
+++ b/index.html
@@ -248,19 +248,19 @@
 					<div class="plan-box">	
 						<div>
 							<h3>Premium</h3>
-							<p class="plan-price">$399 / month</p>
+							<p class="plan-price">$399 <span>/ month</span></p>
 							<p class="plan-price-meal">That's only 13.30$ per meal</p>
 						</div>
 						<div>
 							<ul>
-								<li><i class="ion-ios-checkmark-empty">1 meal every day</i></li>
-								<li><i class="ion-ios-checkmark-empty">Order 24/7</i></li>
-								<li><i class="ion-ios-checkmark-empty">Access to newest creations</i></li>
-								<li><i class="ion-ios-checkmark-empty">Free delivery</i></li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal every day</li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
 							</ul>
 						</div>
 						<div>
-							<a href="#" class="btn btn-full"></a>
+							<a href="#" class="btn btn-full">Sign up now</a>
 						</div>
 					</div><!-- end of plan-box -->
 				</div><!-- end of col span-1-of-3 -->					
@@ -268,19 +268,19 @@
 					<div class="plan-box">	
 						<div>
 							<h3>Pro</h3>
-							<p class="plan-price">$199 / month</p>
+							<p class="plan-price">$199 <span>/ month</span></p>
 							<p class="plan-price-meal">That's only 14.90$ per meal</p>
 						</div>
 						<div>
 							<ul>
-								<li><i class="ion-ios-checkmark-empty">1 meal 10 days/month</i></li>
-								<li><i class="ion-ios-checkmark-empty">Order 24/7</i></li>
-								<li><i class="ion-ios-checkmark-empty">Access to newest creations</i></li>
-								<li><i class="ion-ios-checkmark-empty">Free delivery</i></li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal 10 days/month</li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
 							</ul>
 						</div>
 						<div>
-							<a href="#" class="btn btn-ghost"></a>
+							<a href="#" class="btn btn-ghost">Sign up now</a>
 						</div>
 					</div><!-- end of plan-box -->
 				</div><!-- end of col span-1-of-3 -->	
@@ -288,24 +288,88 @@
 					<div class="plan-box">	
 						<div>
 							<h3>Starter</h3>
-							<p class="plan-price">$99 / month</p>
-							<p class="plan-price-meal"></p>
+							<p class="plan-price">$19 <span>/ meal</span></p>
+							<p class="plan-price-meal"> &nbsp;</p>
+							<!-- need special character to even out the hr -->
 						</div>
 						<div>
 							<ul>
-								<li><i class="ion-ios-checkmark-empty">1 meal</i></li>
-								<li><i class="ion-ios-checkmark-empty">Order 8 am to 12 pm</i></li>
-								<li><i class="ion-ios-close-empty">Access to newest creations</i></li>
-								<li><i class="ion-ios-checkmark-empty">Free delivery</i></li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal</li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>Order 8 am to 12 pm</li>
+								<li><i class="ion-ios-close-empty icon-small"></i>Access to newest creations</li>
+								<li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
 							</ul>
 						</div>
 						<div>
-							<a href="#" class="btn btn-ghost"></a>
+							<a href="#" class="btn btn-ghost">Sign up now</a>
 						</div>
 					</div><!-- end of plan-box -->
 				</div><!-- end of col span-1-of-3 -->				
 			</div><!-- end of row  -->
 		</section>
-
+		<section class="section-form">
+			<div class="row">
+				<h2>We're happy to hear from you</h2>
+			</div>
+			<div class="row">
+				<form action="#" method="post" class="contact-form">
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label for="name">Name</label>
+							
+						</div><!-- end of col span-1-of-3 -->
+						<div class="col span-2-of-3">
+							<!-- this column will be twice as wide as the 1 of 3 div -->
+							<input type="text" name="name" id="name" placeholder="Your Name" required>
+						</div><!-- end of col span-2-of-3 -->
+					</div><!-- end of row  -->
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label for="email">Email</label>
+						</div><!-- end of col span-1-of-3 -->
+						<div class="col span-2-of-3">
+							<input type="email" name="email" id="email" placeholder="Your Email" required>
+						</div><!-- end of col span-2-of-3 -->
+					</div><!-- end of row  -->
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label for="find-us">How did you find us?</label>
+						</div><!-- end of col span-1-of-3 -->
+						<div class="col span-2-of-3">
+							<select name="find-us" id="find-us">
+								<option value="friends">Friends</option>
+								<option value="search" selected>Search Engine</option>
+								<option value="ad">Advertisement</option>
+								<option value="other">Other</option>
+							</select>
+						</div><!-- end of col span-2-of-3 -->
+					</div><!-- end of row  -->
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label>Newsletter?</label>
+						</div><!-- end of col span-1-of-3 -->
+						<div class="col span-2-of-3">
+							<input type="checkbox" name="news" id="news"> Yes, please!
+						</div><!-- end of col span-2-of-3 -->
+					</div><!-- end of row  -->	
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label>Drop us a line</label>
+						</div><!-- end of col span-1-of-3 -->
+						<div class="col span-2-of-3">
+							<textarea name="message" placeholder="Your Message"></textarea>
+						</div><!-- end of col span-2-of-3 -->
+					</div><!-- end of row  -->	
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label>&nbsp;</label>
+						</div><!-- end of col span-1-of-3 -->
+						<div class="col span-2-of-3">
+							<input type="submit" value="Send It!">
+						</div><!-- end of col span-2-of-3 -->
+					</div><!-- end of row  -->	
+				</form>
+			</div><!-- end of row  -->
+		</section>
 	</body>
 </html>
