--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- tells mobile phones to start with a scale of 1 -->
     <title>Omnifood</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,300italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="vendors/css/grid.css">  
     <link rel="stylesheet" href="vendors/css/ionicons.css">  
     <link rel="stylesheet" href="vendors/css/normalize.css">
     <link rel="stylesheet" href="resources/css/style.css">  
+    <link rel="stylesheet" href="resources/css/queries.css">  
   </head>
 	<body>
 		<header>
@@ -371,5 +374,29 @@
 				</form>
 			</div><!-- end of row  -->
 		</section>
+		<footer>
+			<div class="row">
+				<div class="col span-1-of-2">
+					<ul class="footer-nav">
+						<li><a href="#">About Us</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Press</a></li>
+						<li><a href="#">iOS</a></li>
+						<li><a href="#">Android App</a></li>
+					</ul>
+				</div><!-- end of col span-1-of-2 -->
+				<div class="col span-1-of-2">
+					<ul class="social-links">
+						<li><a href="#"><i class="ion-social-facebook"></i></a></li>
+						<li><a href="#"><i class="ion-social-twitter"></i></a></li>
+						<li><a href="#"><i class="ion-social-googleplus"></i></a></li>
+						<li><a href="#"><i class="ion-social-instagram"></i></a></li>
+					</ul>
+				</div><!-- end of col span-1-of-2 -->
+			</div><!-- end of row  -->
+			<div class="row">
+				<p>Copyright &copy; 2016 by Omnifood.  All rights reserved.</p>
+			</div><!-- end of row-->
+		</footer>
 	</body>
 </html>
