added media query file

--- a/index.html
+++ b/index.html
@@ -398,5 +398,11 @@
 				<p>Copyright &copy; 2016 by Omnifood.  All rights reserved.</p>
 			</div><!-- end of row-->
 		</footer>
+		<script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+		<script src"https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
+		<!-- translates new html5 code to regular html -->
+		<script src="https://cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
+		<!-- translates new css3 code to old css, last-child/firstchild on ie678 -->
 	</body>
+
 </html>
