starting fixed navi

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   </head>
 	<body>
 		<header>
-			<nav>
+			<nav class="sticky">
 				<div class="row">
 					<img src="resources/css/img/logo-white.png" alt="Omnifood logo" class="logo">
+					<img src="resources/css/img/logo.png" alt="Omnifood logo" class="logo-black">
 					<ul class="main-nav">
 						<li><a href="#">Food Delivery</a></li>
 						<li><a href="#">How It Works</a></li>
@@ -398,11 +399,13 @@
 				<p>Copyright &copy; 2016 by Omnifood.  All rights reserved.</p>
 			</div><!-- end of row-->
 		</footer>
+		<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
 		<script src"https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
 		<!-- translates new html5 code to regular html -->
 		<script src="https://cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
 		<!-- translates new css3 code to old css, last-child/firstchild on ie678 -->
+		<script src="resources/js/script.js"></script>
 	</body>
 
 </html>
